Se agregó lógica para descargar el archivo de tweets desde el Drive y para leer correctamente las funciones desde GitHub.

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8/pGuhUyH3pJse5gfVi29",
+      "authorship_tag": "ABX9TyPLIpNfVmrBRJn5cd5gbFql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gbonanno/gab-dataart-challenge/blob/initial-steps/src/challenge.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gbonanno/gab-dataart-challenge/blob/developer-gbonanno/src/challenge.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,7 +55,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "source": [
+        "pip install emoji"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rkA9bxYHFX0s",
+        "outputId": "f61f9927-662f-46a8-a025-58b5d06f903b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting emoji\n",
+            "  Downloading emoji-2.12.1-py3-none-any.whl (431 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m431.4/431.4 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: typing-extensions>=4.7.0 in /usr/local/lib/python3.10/dist-packages (from emoji) (4.11.0)\n",
+            "Installing collected packages: emoji\n",
+            "Successfully installed emoji-2.12.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install memory_profiler"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Egqox0VsLZKP",
+        "outputId": "90e732ba-ccba-4d4b-e64c-ee74382b39c4"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting memory_profiler\n",
+            "  Downloading memory_profiler-0.61.0-py3-none-any.whl (31 kB)\n",
+            "Requirement already satisfied: psutil in /usr/local/lib/python3.10/dist-packages (from memory_profiler) (5.9.5)\n",
+            "Installing collected packages: memory_profiler\n",
+            "Successfully installed memory_profiler-0.61.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "id": "GrFP34CgJQY4"
       },
@@ -68,7 +123,11 @@
         "import re\n",
         "import emoji\n",
         "from google.colab import drive\n",
+        "import gdown\n",
+        "import zipfile\n",
         "from collections import defaultdict\n",
+        "import importlib.util\n",
+        "import sys\n",
         "from memory_profiler import memory_usage\n",
         "import cProfile"
       ]
@@ -76,37 +135,73 @@
     {
       "cell_type": "code",
       "source": [
-        "# pip install emoji"
+        "# Replace 'FILE_ID' with the actual file ID from the Google Drive link\n",
+        "file_id = '1ig2ngoXFTxP5Pa8muXo02mDTFexZzsis'\n",
+        "file_path_zip = 'farmers-protest-tweets-2021-2-4.json.zip'\n",
+        "file_name = 'farmers-protest-tweets-2021-2-4.json'\n",
+        "local_path = '.'\n",
+        "\n",
+        "gdown.download(f'https://drive.google.com/uc?id={file_id}', file_path_zip, quiet=False)"
       ],
       "metadata": {
-        "id": "rkA9bxYHFX0s"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        },
+        "id": "VprFcJUdNy10",
+        "outputId": "37d00c0c-d9a7-4a6b-b369-a49f54690ee5"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading...\n",
+            "From (original): https://drive.google.com/uc?id=1ig2ngoXFTxP5Pa8muXo02mDTFexZzsis\n",
+            "From (redirected): https://drive.google.com/uc?id=1ig2ngoXFTxP5Pa8muXo02mDTFexZzsis&confirm=t&uuid=1f368019-88c0-4de2-829a-72c8ba6beb85\n",
+            "To: /content/farmers-protest-tweets-2021-2-4.json.zip\n",
+            "100%|██████████| 60.4M/60.4M [00:00<00:00, 96.8MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'farmers-protest-tweets-2021-2-4.json.zip'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# pip install memory_profiler"
+        "# Descomprimir archivo\n",
+        "with zipfile.ZipFile(file_path_zip, 'r') as zip_ref:\n",
+        "    zip_ref.extractall(local_path)"
       ],
       "metadata": {
-        "id": "Egqox0VsLZKP"
+        "id": "jvquO5M2O8rY"
       },
-      "execution_count": 3,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Se abre el archivo\n",
-        "file_path = 'farmers-protest-tweets-2021-2-4.json'\n",
-        "path = os.getcwd() + '/' + file_path\n",
-        "fp = open(path, 'r+')"
+        "fp = open(local_path + '/' + file_name, 'r+')"
       ],
       "metadata": {
         "id": "5jGr_HoJPTFm"
       },
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -121,7 +216,7 @@
       "metadata": {
         "id": "X5jm3X9SkokT"
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -135,9 +230,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZrkitxvZZogj",
-        "outputId": "6ea0ccff-4d89-4f11-fe33-fff0c22acb6b"
+        "outputId": "391846a1-fda3-4008-a3b5-c57adc36ca3d"
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 24
         }
       ]
     },
@@ -163,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QAWUpAaJbazO",
-        "outputId": "98e64f1f-cb68-469b-a561-3f7b936af1b4"
+        "outputId": "8bee0bad-4743-435d-b778-d4f4ae3b5b9a"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,9 +371,9 @@
           "height": 71
         },
         "id": "-yyzaBRUCTGE",
-        "outputId": "fb689860-f3e8-46f5-95f9-697ef22a93d0"
+        "outputId": "d9ebab62-341f-4894-c487-1cb216ecb1f8"
       },
-      "execution_count": 8,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +386,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 26
         }
       ]
     },
@@ -319,7 +414,7 @@
       "metadata": {
         "id": "1ecMQ0kQC0Fa"
       },
-      "execution_count": 9,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -333,9 +428,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8av6n0NQ306",
-        "outputId": "70b89133-5295-45dd-bc09-8e21f0f2d10a"
+        "outputId": "3211bd7f-71b0-4198-c7ec-6fc7cfca6307"
       },
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +440,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 28
         }
       ]
     },
@@ -364,7 +459,7 @@
       "metadata": {
         "id": "_2Ropk6jFjIs"
       },
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -378,9 +473,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KysTuXYfFl1U",
-        "outputId": "0e10dc74-f0a9-45c4-f00b-142bb4cb2b9c"
+        "outputId": "c95f5f6d-cff3-4b23-fbe7-a302041f6566"
       },
-      "execution_count": 12,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 30
         }
       ]
     },
@@ -408,22 +503,22 @@
       "source": [
         "# Medimos el uso de memoria de la función.\n",
         "mem_usage = memory_usage((extract_emojis2, (string_aux,)))\n",
-        "print(f\"Memory usage: {mem_usage}\")"
+        "print(f\"Uso de memoria: {mem_usage}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CPTVxA-GEAyk",
-        "outputId": "2d175e52-0b87-46ea-b855-47e23f585f75"
+        "outputId": "cdf8941b-7399-4eaf-b60e-0abdbba21e9c"
       },
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Memory usage: [1319.2421875, 1319.2421875, 1319.2421875]\n"
+            "Memory usage: [1347.41015625, 1347.41015625, 1347.41015625]\n"
           ]
         }
       ]
@@ -439,9 +534,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7LwKTFqZKxwe",
-        "outputId": "f95f9b6b-e378-4e9a-83f7-0cf3230de40f"
+        "outputId": "59f47269-060e-4e7d-c9ac-bb295da597ba"
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +547,7 @@
             "   Ordered by: standard name\n",
             "\n",
             "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
-            "        1    0.000    0.000    0.000    0.000 <ipython-input-11-b73180df06de>:3(extract_emojis2)\n",
+            "        1    0.000    0.000    0.000    0.000 <ipython-input-29-b73180df06de>:3(extract_emojis2)\n",
             "        1    0.000    0.000    0.000    0.000 <string>:1(<module>)\n",
             "        1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}\n",
             "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
@@ -474,7 +569,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Mount Google Drive (if needed)\n",
+        "# Descargar las funciones desde GitHub\n",
         "drive.mount('/content/drive')\n",
         "!git clone https://github.com/gbonanno/gab-dataart-challenge.git"
       ],
@@ -483,9 +578,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cviYTw2nGMcJ",
-        "outputId": "a3049de7-39c4-41fd-f0c9-f41fb6d97c2a"
+        "outputId": "270ce6e9-7f90-4555-ca8b-ee8c9868f7cb"
       },
-      "execution_count": 16,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,12 +588,12 @@
           "text": [
             "Mounted at /content/drive\n",
             "Cloning into 'gab-dataart-challenge'...\n",
-            "remote: Enumerating objects: 16, done.\u001b[K\n",
-            "remote: Counting objects: 100% (16/16), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Total 16 (delta 3), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (16/16), 567.95 KiB | 1.81 MiB/s, done.\n",
-            "Resolving deltas: 100% (3/3), done.\n"
+            "remote: Enumerating objects: 20, done.\u001b[K\n",
+            "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Total 20 (delta 6), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (20/20), 572.56 KiB | 1.74 MiB/s, done.\n",
+            "Resolving deltas: 100% (6/6), done.\n"
           ]
         }
       ]
@@ -506,37 +601,77 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import the function\n",
-        "from gab-dataart-challenge.src.q1_memory.py import q1_memory"
+        "# Leer las funciones y ejecutarlas\n",
+        "module_path = './gab-dataart-challenge/src/'\n",
+        "module_name1 = 'q1_memory'\n",
+        "module_name2 = 'q1_time'\n",
+        "module_name3 = 'q2_memory'\n",
+        "module_name4 = 'q2_time'\n",
+        "module_name5 = 'q3_memory'\n",
+        "module_name6 = 'q3_time'\n",
+        "\n",
+        "# Cargar módulos\n",
+        "spec_q1_memory = importlib.util.spec_from_file_location(module_name1, module_path + module_name1 + '.py')\n",
+        "module_q1_memory = importlib.util.module_from_spec(spec_q1_memory)\n",
+        "sys.modules[module_name1] = module_q1_memory\n",
+        "spec_q1_memory.loader.exec_module(module_q1_memory)\n",
+        "\n",
+        "spec_q1_time = importlib.util.spec_from_file_location(module_name2, module_path + module_name2 + '.py')\n",
+        "module_q1_time = importlib.util.module_from_spec(spec_q1_time)\n",
+        "sys.modules[module_name2] = module_q1_time\n",
+        "spec_q1_time.loader.exec_module(module_q1_time)\n",
+        "\n",
+        "spec_q2_memory = importlib.util.spec_from_file_location(module_name3, module_path + module_name3 + '.py')\n",
+        "module_q2_memory = importlib.util.module_from_spec(spec_q2_memory)\n",
+        "sys.modules[module_name3] = module_q2_memory\n",
+        "spec_q2_memory.loader.exec_module(module_q2_memory)\n",
+        "\n",
+        "spec_q2_time = importlib.util.spec_from_file_location(module_name4, module_path + module_name4 + '.py')\n",
+        "module_q2_time = importlib.util.module_from_spec(spec_q2_time)\n",
+        "sys.modules[module_name4] = module_q2_time\n",
+        "spec_q2_time.loader.exec_module(module_q2_time)\n",
+        "\n",
+        "spec_q3_memory = importlib.util.spec_from_file_location(module_name5, module_path + module_name5 + '.py')\n",
+        "module_q3_memory = importlib.util.module_from_spec(spec_q3_memory)\n",
+        "sys.modules[module_name5] = module_q3_memory\n",
+        "spec_q3_memory.loader.exec_module(module_q3_memory)\n",
+        "\n",
+        "spec_q3_time = importlib.util.spec_from_file_location(module_name6, module_path + module_name6 + '.py')\n",
+        "module_q3_time = importlib.util.module_from_spec(spec_q3_time)\n",
+        "sys.modules[module_name6] = module_q3_time\n",
+        "spec_q3_time.loader.exec_module(module_q3_time)\n",
+        "\n",
+        "# Cargar las funciones desde los módulos\n",
+        "q1_memory = module_q1_memory.q1_memory\n",
+        "q1_time = module_q1_time.q1_time\n",
+        "q2_memory = module_q2_memory.q2_memory\n",
+        "q2_time = module_q2_time.q2_time\n",
+        "q3_memory = module_q3_memory.q3_memory\n",
+        "q3_time = module_q3_time.q3_time"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 108
-        },
-        "id": "fLgmiN7wkuyH",
-        "outputId": "69df9f77-b7f3-409c-c08a-bccca4868094"
+        "id": "JyB_Qo76eclB"
       },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-17-63c469d16e4a>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-63c469d16e4a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    from gab-dataart-challenge.src.q1_memory.py import q1_memory\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": 41,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Now you can use the function\n",
-        "q1_memory()"
+        "# Llamada a la función 1\n",
+        "q1_memory(local_path + '/' + file_name)"
       ],
       "metadata": {
         "id": "WWpJpOOBl4E3"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2uhiAlkLe8Ac"
       },
       "execution_count": null,
       "outputs": []
